--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -271,8 +271,9 @@ h1 {
 	padding: 1.5vh;
 	margin: 10px 0 20px auto;
 	font-size: 1em;
-	text-transform: uppercase;
-	text-align: center;
+	display: flex;
+  justify-content: space-evenly;
+	flex-wrap: wrap;
 }
 .select {
 	border: 0;
@@ -421,9 +422,6 @@ label {
  opacity: 0;
  position: absolute;
  z-index: -1;
-
-
-
 }
 
 .profile_icon {
@@ -453,10 +451,6 @@ input[type="file"] {
 	margin: 10px auto;
 	font-size: 0.8em;
 }
-
-
-
-
 
 .con_fb {
 	max-width: 250px;
@@ -513,7 +507,10 @@ input[type="file"] {
 }
 .faq_title {
 	font-weight: bold;
-	line-height: 2em;
+	line-height: 2.5em;
+	font-size: 1em;
+	text-transform: uppercase;
+	margin-bottom: 15px;
 }
 .faq_index {
 	display: flex;
@@ -526,6 +523,10 @@ input[type="file"] {
 	text-align: center;
 	line-height: 1.4em;
 	height: 30vh;
+}
+
+.faq_card .fa {
+	color: #F78D57;
 }
 
 /* FOOTER ------------------------------- */
@@ -779,6 +780,10 @@ input[type="checkbox"] {
 	}
 	.flechas {
 		top: 25%;
+	}
+	.flechas .fa {
+		color: white;
+		font-size: 1em;
 	}
 	.caja {
 		background-color: white;
