--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -541,6 +541,154 @@ input[type="file"] {
 	color: #F3A530;
 }
 
+
+/* MIS PARTIDOS ------------------------------- */
+
+.matches-container {
+	
+	display:flex;
+	justify-content: space-between;
+	flex-wrap: wrap;
+}
+
+.container-match {
+	height:100px;
+	width: 100%;
+	margin: 10px;
+	position: relative;
+	overflow: hidden;
+	border:1px solid black;
+}
+
+.top {
+	height: 108px;
+	padding: 10px;
+}
+.overlay-match {
+	width: 100%;
+	overflow: hidden;
+	position: absolute;
+	top: 0;
+	left: 0;
+	height: 100%;
+}
+
+.sport-heading {
+	display: inline-block;
+	width: auto;
+	font-size: 1.4em;
+	overflow:hidden;
+	margin: 4px;
+}
+.nplayers-container {
+	float:right;
+	overflow: hidden;
+	position: absolute;
+	top:0;
+}
+.divisor {
+	width: 80px;
+	height: 80px;
+
+}
+.hay-nplayers {
+	font-size: 30px;
+	color: #d87a0e;
+	position: absolute;
+	top: 5px;
+	left: 40px;
+}
+.total-nplayers {
+	font-size: 1.4em;
+	color: black;
+	position: absolute;
+	bottom: 20px;
+	right: 5px;
+}
+.picContainer {
+	overflow: hidden;
+	position: absolute;
+	top: 80px;
+	right: 10px;
+	margin: 0;
+	display: inline;
+	width: 54px;
+  	height: 54px;
+}
+.userPic {
+
+	overflow: hidden;
+	float: right;
+	position: relative;
+	position: relative;
+	top: 5px;
+	right: 5px;
+	width: 45px;
+	height: 45px;
+	border-radius: 50%;
+	z-index: 3;
+
+
+}
+.countL {
+	display:none;
+
+}
+.fondo {
+
+	height: 100%;
+	width: 100%;
+	z-index: 2;
+	background-color: white;
+	position: relative;
+	top: 0;
+	right: 0;
+	float: right;
+	border-radius: 50%;
+}
+.info-match {
+	overflow: hidden;
+
+
+}
+.info-match p {
+	margin: 0 0 0 4px;
+	font-size: 1em;
+	font-family: 'Roboto', sans-serif;
+}
+
+.info-match p:first-child {
+	font-size: 1em;
+	font-weight: 600;
+	padding-bottom: 0;
+}
+.info-match p:nth-child(n+3) {
+	font-size: 0.8em;
+	color: black;
+}
+.info-match p:last-child {
+	margin-top:0;
+}
+
+.bottom {
+	display:none;
+	width: 100%;
+	height: 102px;;
+	background-image: url('../images/tennis.jpg');
+	background-size: cover;
+}
+
+.views-likes {
+	position: relative;
+  top: 75px;
+  left: 10px;
+}
+.views-likes p,i{
+	display:inline;
+	color:white;
+}
+
+
 /* FOOTER ------------------------------- */
 .footer_outer {
 	max-width: 1140px;
@@ -732,6 +880,50 @@ table {
 	.nav-items a {
 		font-size: 0.6em;
 	}
+	.matches-container {
+		width: 70%;
+		float:right;
+	}
+	
+
+	.container-match {
+		height:210px;
+		width: 180px;
+	}
+	.bottom {
+		display:block;
+	}
+	.sport-heading {
+		display: inline-block;
+		width: auto;
+		font-size: 1.6em;
+		margin:10px;
+
+	}
+	.info-match {
+		position: absolute;
+		top: 60px;
+		
+	}
+	.info-match p {
+
+		padding: 5px;
+		font-size: 1.2em;
+		font-family: 'Roboto', sans-serif;
+	}
+	.info-match p:first-child {
+		font-size: 1.1em;
+
+	}
+	.info-match p:nth-child(n+3) {
+		font-size: 0.8em;
+		color: white;
+	}
+	.countL {
+		display:inline-block;
+	}
+
+
 }
 
 @media (min-width:620px) {
