--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -140,15 +140,27 @@ h1 {
 	float: right;
 	color: #30499B;
 }
+.dropbtn {
+	overflow: hidden;
+    position: relative;
+	right: 20px;
+	background-color: white
+}
+.dropbtn i {
+	magin-right:0;
+	font-size: 30px;
+}
 .dropdown {
     position: relative;
     display: inline-block;
 }
 .dropdown-content {
     display: none;
-    position: absolute;
-    background-color: #f9f9f9;
-    min-width: 160px;
+	position: fixed;
+	right: 0;
+    background-color: #ffffff;
+	width:100%;
+	height: 100vh;
     box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
     z-index: 99;
 }
@@ -608,7 +620,7 @@ input[type="file"] {
 .picContainer {
 	overflow: hidden;
 	position: absolute;
-	top: 80px;
+	top: 35px;
 	right: 10px;
 	margin: 0;
 	display: inline;
@@ -630,7 +642,16 @@ input[type="file"] {
 
 
 }
-.countL {
+.countMobile {
+	display: inline;
+	overflow: hidden;
+	position: relative;
+	float: right;
+	top:10px;
+	right:10px;
+    font-size: 1.4em;
+}
+.countDesktop {
 	display:none;
 
 }
@@ -682,10 +703,10 @@ input[type="file"] {
 	position: relative;
   top: 75px;
   left: 10px;
+  color:white;
 }
-.views-likes p,i{
+.views-likes p{
 	display:inline;
-	color:white;
 }
 
 
@@ -919,8 +940,14 @@ table {
 		font-size: 0.8em;
 		color: white;
 	}
-	.countL {
+	.countMobile {
+		display: none;
+	}
+	.countDesktop {
 		display:inline-block;
+	}
+	.picContainer {
+		top: 80px;
 	}
 
 
@@ -983,6 +1010,7 @@ table {
 	}
 	.header_link {
 		display: inline-block;
+
 	}
 	.evento {
 		display: table-cell;
