--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -709,6 +709,9 @@ input[type="file"] {
 	display:inline;
 }
 
+.match-field {
+	padding: 5px;
+}
 
 /* FOOTER ------------------------------- */
 .footer_outer {
@@ -896,6 +899,25 @@ table {
 	width: 100%;
 }
 
+.caja {
+	background-color: white;
+	max-width: 300px;
+	padding-top: 25px;
+	padding-bottom: 25px;
+}
+
+.hide {
+	display:none;
+}
+#in-sport {
+	width: 100%;
+	height: 40px;
+	font-size: 1.1em;
+}
+#in-nplayer {
+	width:100%;
+}
+
 /* MEDIA QUERIES ------------------------------- */
 @media (min-width: 420px) {
 	.nav-items a {
@@ -1031,12 +1053,7 @@ table {
 		color: white;
 		font-size: 1em;
 	}
-	.caja {
-		background-color: white;
-		max-width: 300px;
-		padding-top: 25px;
-		padding-bottom: 25px;
-	}
+	
 	.login_img {
 		background-image: url("../images/login_img.jpg");
 		background-size: cover;
