mejoras en match.create form

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -345,6 +345,7 @@ h1 {
 }
 .flecha_der {
 	float: right;
+	
 }
 .ver_todos {
 	float: right;
@@ -402,6 +403,7 @@ h1 {
 
 /* RECOMENDADOS ------------------------------- */
 
+
 .lista-prox-part {
 	display: flex;
 	flex-wrap: wrap;
@@ -426,6 +428,44 @@ h1 {
 }
 
 /* FORMS ------------------------------- */
+.caja {
+	background-color: white;
+	max-width: 300px;
+	padding-top: 25px;
+	padding-bottom: 25px;
+}
+
+.hide {
+	display:none;
+}
+
+.match-field {
+	margin: 5px;
+	padding: 5px;
+}
+
+.input-create {
+	width: 100%;
+	height: 40px;
+	font-size: 1.1em;
+}
+
+.lbl-create {
+	font-size:1.1em;
+	font-family: 'Roboto', sans-serif;
+}
+.date-cont {
+	display:flex;
+	flex-wrap: wrap;
+	flex-direction: row;
+	align-content: flex-start;
+	justify-content: space-between;
+}
+.date-input {
+	height:40px;
+	flex-shrink:1;
+	flex-basis: 25%;
+}
 .form {
 	margin: 20px auto;
 }
@@ -709,9 +749,8 @@ input[type="file"] {
 	display:inline;
 }
 
-.match-field {
-	padding: 5px;
-}
+
+
 
 /* FOOTER ------------------------------- */
 .footer_outer {
@@ -899,24 +938,7 @@ table {
 	width: 100%;
 }
 
-.caja {
-	background-color: white;
-	max-width: 300px;
-	padding-top: 25px;
-	padding-bottom: 25px;
-}
 
-.hide {
-	display:none;
-}
-#in-sport {
-	width: 100%;
-	height: 40px;
-	font-size: 1.1em;
-}
-#in-nplayer {
-	width:100%;
-}
 
 /* MEDIA QUERIES ------------------------------- */
 @media (min-width: 420px) {
