--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -189,10 +189,11 @@ h1 {
 	padding: 0;
 }
 .nav-items {
-	margin-right: 10px;
+	margin-right: 18px;
+	list-style: none;
 }
 .nav-items:last-child {
-	margin-right: 10px;
+	margin-right: 18px;
 }
 .nav-items a {
 	font-size: 0.4em;
@@ -227,7 +228,7 @@ h1 {
 	font-size: 0.9em;
 	display: block;
 }
-.btn-solid:hover {
+.btn-solid:hover, .btn-solid-sm:hover, .btn-solid-lg:hover {
 	background-color: #01264a;
 	color: white;
 }
@@ -243,10 +244,6 @@ h1 {
 	margin-left: auto;
 	margin-right: auto;
 }
-.btn-solid-sm:hover {
-	background-color: #01264a;
-	color: white;
-}
 .btn-solid-lg {
 	width: 250px;
 	padding: 6px;
@@ -259,14 +256,13 @@ h1 {
 	display: block;
 	letter-spacing: 0.05em;
 }
-.btn-solid-lg:hover {
-	background-color: #01264a;
-	color: white;
-}
 .btn_upload {
-	max-width: 100px;
+	width: 250px;
 	display: block;
 	background-color: #F3A530;
+}
+.btn_upload:hover {
+	background-color: #bd7100,
 }
 /* MEGA-IMG ------------------------------- */
 .mega {
@@ -434,22 +430,18 @@ h1 {
 	padding-top: 25px;
 	padding-bottom: 25px;
 }
-
 .hide {
 	display:none;
 }
-
 .match-field {
 	margin: 5px;
 	padding: 5px;
 }
-
 .input-create {
 	width: 100%;
 	height: 40px;
 	font-size: 1.1em;
 }
-
 .lbl-create {
 	font-size:1.1em;
 	font-family: 'Roboto', sans-serif;
@@ -501,7 +493,7 @@ label {
 	display: block;
 	margin: 15px auto 0;
 }
-input[type="text"], input[type="email"], input[type="password"] {
+.field {
 	border: 1px solid #30499B;
 	margin: 5px auto;
 	width: 250px;
@@ -624,7 +616,7 @@ input[type="file"] {
 	display: inline-block;
 	width: auto;
 	font-size: 1.4em;
-	overflow:hidden;
+	overflow: hidden;
 	margin: 4px;
 }
 .nplayers-container {
@@ -644,11 +636,11 @@ input[type="file"] {
 	left: 40px;
 }
 .total-nplayers {
-	font-size: 1.4em;
+	font-size: 1em;
 	color: black;
 	position: absolute;
 	bottom: 20px;
-	right: -2px;
+	right: 2px;
 }
 .picContainer {
 	overflow: hidden;
@@ -839,14 +831,14 @@ footer .copyright {
 .form h6 {
 	display: inline;
 }
-input[type="text"] {
-	border: 1px solid #30499B;
-	margin: 5px auto;
-	width: 250px;
-	padding: 6px;
-	display: block;
-	font-size: 0.8em;
-}
+/*input[type="text"] {
+border: 1px solid #30499B;
+margin: 5px auto;
+width: 250px;
+padding: 6px;
+display: block;
+font-size: 0.8em;
+}*/
 input[type="password"] {
 	border: 1px solid #30499B;
 	margin: 5px auto;
@@ -926,10 +918,49 @@ table {
 	width: 100%;
 }
 
-
+/* PROFILE */
+.left-nav {
+	display: inline-block;
+	overflow: hidden;
+	width: 180px;
+}
+.buscar {
+	width: 150px;
+	border: 1px solid #30499B;
+	margin-bottom: 30px;
+	padding: 6px;
+	display: inline-block;
+	font-size: 0.8em;
+}
+.main-item {
+	font-size: 0.9em;
+	color: #30499B;
+	font-weight: 600;
+	margin-bottom: 10px;
+}
+.dropdown-left {
+	margin-bottom: 20px;
+	width: 150px;
+}
+.dropdown-left li {
+	font-size: 0.9em;
+	color: black;
+	padding: 6px;
+	margin-left: 5px;
+}
+.dropdown-left li:hover {
+	color: white;
+	background-color: #F3A530;
+}
+.controls {
+	display: inline;
+}
 
 /* MEDIA QUERIES ------------------------------- */
 @media (min-width: 420px) {
+	.nav-items {
+		margin-right: 18px;
+	}
 	.nav-items a {
 		font-size: 0.6em;
 	}
@@ -952,7 +983,7 @@ table {
 	}
 	.info-match {
 		position: absolute;
-		top: 180px;
+		top: 100px;
 	}
 	.info-match p {
 		padding: 5px;
@@ -1035,7 +1066,6 @@ table {
 	}
 	.header_link {
 		display: inline-block;
-
 	}
 	.evento {
 		display: table-cell;
