--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -609,7 +609,7 @@ input[type="file"] {
 	margin-bottom: 40px;
 	position: relative;
 	overflow: hidden;
-	border: 1px solid black;
+	border: 1px solid lightgrey;
 }
 .top {
 	height: 50%;
